# swirly

./: LICENSE  README.md  pyproject.toml  requirements.txt
swirly/: cli.py  commands.py  engine.py  env.py  lesson.py
swirly/lessons/: boolean_filtering.yaml  dataframe_creation.yaml  groupby_aggregation.yaml  indexing.yaml  merging.yaml  missing_data.yaml  series_basics.yaml  sorting_reshaping.yaml  stats_vis.yaml
